src/test/ui/nll/ty-outlives/ty-param-fn.stderr
warning: not reporting region error due to nll
  --> $DIR/ty-param-fn.rs:21:5
   |
LL |     x
   |     ^

warning: not reporting region error due to nll
  --> $DIR/ty-param-fn.rs:37:5
   |
LL |     x
   |     ^

error[E0309]: the parameter type `T` may not live long enough
  --> $DIR/ty-param-fn.rs:21:5
   |
LL |     x
   |     ^
   |
   = help: consider adding an explicit lifetime bound `T: 'a`...

error[E0309]: the parameter type `T` may not live long enough
  --> $DIR/ty-param-fn.rs:37:5
   |
LL |     x
   |     ^
   |
   = help: consider adding an explicit lifetime bound `T: 'a`...

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0309`.
